--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ source-code: https://github.com/lsmith13/collectionbuilder-Southern-Oregon-Lesbi
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder-Southern Oregon Lesbian Lands 
+title: Southern Oregon Lesbian Lands 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Materials related to the Lesbian Lands moevment in Southern Oregon
+tagline: Materials related to the Lesbian Lands movement in Southern Oregon
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "This collection is made for an indepdendent digital history project with the University of Oregon History and Digital Humanities Departments"
