--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Southern Oregon Lesbian Lands
 tagline: Materials related to the Lesbian Lands movement in Southern Oregon
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This collection is made for an indepdendent digital history project with the University of Oregon History and Digital Humanities Departments"
+description: "This collection is made for an independent digital history project with the University of Oregon History and Digital Humanities Departments"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Lilly Smith
 
