commented out base url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # on GitHub Pages it is your github repository's name prefixed with a /
 #baseurl: /Southern-Oregon-Lesbian-Lands 
 # location of code, the full url to your github repository
-source-code: https://github.com/lsmith13/collectionbuilder-Southern-Oregon-Lesbian-Lands
+# source-code: https://github.com/lsmith13/collectionbuilder-Southern-Oregon-Lesbian-Lands
 
 ##########
 # SITE SETTINGS
